<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.musicplayer.NowPlayingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
        android:id="@+id/mainInfo"
        android:text="@string/nowPlayingInfo"
        style="@style/layoutInfo"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageview_album_icon"
            android:layout_marginTop="16dp"
            android:src="@drawable/music_nowicon" />

        <TextView
            android:text="@string/songName"
            style="@style/nowPlayingText" />

        <TextView
            android:text="@string/artist"
            style="@style/nowPlayingText" />
        <TextView
            android:id="@+id/now_playing_album"
            android:text="@string/album"
            style="@style/nowPlayingText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/btnSongBack"
                style="@style/playButtons"
                android:src="@drawable/music_back"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/btnPlaySong"
                style="@style/playButtons"
                android:src="@drawable/music_play"
                android:layout_marginLeft="165dp" />

            <ImageView
                android:id="@+id/btnSongForward"
                style="@style/playButtons"
                android:src="@drawable/music_forward"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
