<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.musicplayer.LibraryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
        android:id="@+id/mainInfo"
        android:text="@string/mainActInfo"
        style="@style/layoutInfo"/>

        <TextView
            style="@style/mainScreen"
            android:text="@string/library"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:onClick="songClicked">
            <ImageView
                android:src="@drawable/music_library"
                android:layout_height="50dp"
                android:layout_width="50dp"
                style="@style/imgSong"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/template_songArtist"
                    style="@style/mainScreen"
                    android:text="@string/artist"/>

                <TextView
                    android:id="@+id/template_songName"
                    style="@style/mainScreen"
                    android:text="@string/songName"
                    android:layout_below="@id/template_songArtist"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBodyText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:onClick="songClicked">
            <ImageView
                android:src="@drawable/music_library"
                android:layout_height="50dp"
                android:layout_width="50dp"
                style="@style/imgSong"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/template_songArtist2"
                    style="@style/mainScreen"
                    android:text="@string/artist"/>

                <TextView
                    android:id="@+id/template_songName2"
                    style="@style/mainScreen"
                    android:text="@string/songName"
                    android:layout_below="@id/template_songArtist2"/>

            </RelativeLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBodyText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:onClick="songClicked">
            <ImageView
                android:src="@drawable/music_library"
                android:layout_height="50dp"
                android:layout_width="50dp"
                style="@style/imgSong"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/template_songArtist3"
                    style="@style/mainScreen"
                    android:text="@string/artist"/>

                <TextView
                    android:id="@+id/template_songName3"
                    style="@style/mainScreen"
                    android:text="@string/songName"
                    android:layout_below="@id/template_songArtist3"/>

            </RelativeLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBodyText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:onClick="songClicked">
            <ImageView
                android:src="@drawable/music_library"
                android:layout_height="50dp"
                android:layout_width="50dp"
                style="@style/imgSong"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/template_songArtist4"
                    style="@style/mainScreen"
                    android:text="@string/artist"/>

                <TextView
                    android:id="@+id/template_songName4"
                    style="@style/mainScreen"
                    android:text="@string/songName"
                    android:layout_below="@id/template_songArtist4"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/library_nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="#000000">

            <ImageView
                android:id="@+id/btnNowPlaying"
                style="@style/imgSong"
                android:src="@drawable/music_nowplay"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/txtNowPlaying"
                    android:text="@string/nowPlaying"
                    android:textSize="16dp"
                    style="@style/songPlaying"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/songPlaying"
                    android:layout_below="@id/txtNowPlaying"
                    style="@style/songPlaying"
                    android:text="Song Name"/>

                <TextView
                    android:id="@+id/songArtist"
                    android:text="Artist"
                    style="@style/songPlaying"
                    android:layout_below="@id/songPlaying"/>

                <TextView
                    android:layout_below="@id/songArtist"
                    style="@style/songPlaying"
                    android:text="Song Album"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
